[package]
edition = "2024"
name = "zzsleep"
version = "0.0.2"
description = "A CLI timer tool that waits until a specified time with a progress bar"
license = "Apache-2.0"
repository = "https://github.com/takumi3488/zz"

[[bin]]
name = "zz"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
indicatif = "0.17"
tokio = { version = "1.49.0", features = ["rt", "macros", "time"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
