[package]
description = "A CLI timer tool that waits until a specified time with a progress bar"
edition = "2024"
license = "Apache-2.0"
name = "zzsleep"
repository = "https://github.com/takumi3488/zz"
version = "0.0.5"

[[bin]]
name = "zz"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
indicatif = "0.17"
tokio = { version = "1.49.0", features = ["rt", "macros", "time"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"
